--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/questionnaire
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/questionnaire?createDatabaseIfNotExist=true
 spring.datasource.username=sozinx
 spring.datasource.password=1234Qwert!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
