[MHQ-4] Adding a session for parallel work script. Adding check for presenting a session to limit user mapping.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=1234Qwert!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
 interval-in-cron-every-minute=0 * * * * *
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+spring.session.timeout.seconds=1200
